# wanlok-banknotes-reader-kotlin

./: CLAUDE.md  settings.gradle.kts
CrossPlatform/: AppController.cpp  AppController.h
app/: build.gradle.kts
app/src/androidTest/java/com/wanlok/banknotesreader/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GLESRenderer.cpp  GLESRenderer.h  VuforiaWrapper.cpp
app/src/main/cpp/vuforia-sdk/include/VuforiaEngine/Controller/Android/: PlatformController_Android.h
app/src/main/java/com/wanlok/banknotesreader/: CameraFragment.kt  DatasetAdapter.kt  DatasetAssets.kt  DatasetFragment.kt  DetectionMethodFragment.kt  MainActivity.kt  SettingsFragment.kt  SettingsLandingFragment.kt  VuforiaView.kt  VuforiaWorker.kt
app/src/main/res/drawable/: ic_arrow_back.xml  ic_camera.xml  ic_check.xml  ic_chevron_right.xml  ic_settings.xml
app/src/main/res/layout/: activity_main.xml  fragment_camera.xml  fragment_dataset.xml  fragment_detection_method.xml  fragment_settings.xml  fragment_settings_landing.xml  item_dataset_target.xml
app/src/main/res/menu/: bottom_nav_menu.xml  dataset_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wanlok/banknotesreader/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
